# fastapi-radixer

./: .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: benchmark.yml
benchmarks/: apps.py  cases.py  dump.py  routes.py  runner.py
python/fastapi_radixer/: __init__.py  _base.py  _fast_routing_table.pyi  _radixer.py  _routing_table.py  parser.py  types.py  utils.py
src/: fast_routing_table.rs  lib.rs  types.rs
tests/: conftest.py  test_routing.py
