[package]
name = "fastapi-radixer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fastapi_radixer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }
uuid = { version = "1.7.0", features = ["v4"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"

[profile.dev]
opt-level = 1

[build-system]
build-backend = "maturin"
